<resources>
    <string name="app_name">期货 TEST</string>
    <string name="install_qq_first">请先安装QQ</string>
    <string name="android_web_agent">ANDROID_AGENT</string>
    <string name="network_error_please_reload">网络连接失败 请重新加载</string>
    <string name="refresh">刷新</string>
    <string name="network_error">网络异常</string>
    <string name="network_time_out">网络超时</string>
    <string name="json_parse_error">数据解析异常</string>
    <string name="network_error_load_image">当前网络不可用，请检查你的网络设置</string>
    <string name="save_image">保存图片</string>
    <string name="save_qrcode_to">二维码保存至%1$s</string>
    <string name="save_qrcode_failure">二维码保存失败</string>
    <string name="live_manager">平台管理条例</string>
    <string name="version_upgrade">升级到新版本(%1$s)</string>
    <string name="upgrade_now">立即升级</string>
    <string name="download_failure">下载失败!</string>
    <string name="downloading">正在下载: %1$s</string>
    <string name="button_downloading">下载中</string>
    <string name="download_start">开始下载</string>
    <string name="download_stop">下载停止</string>
    <string name="please_not_download_again">请勿重复下载</string>
    <string name="download_complete">下载完成</string>
    <string name="permission_granted_success">权限授予成功</string>
    <string name="i_get_it">我知道了</string>
    <string name="check_detail">查看详情</string>
    <string name="api_error_null">服务器空数据</string>
    <string name="api_error_null_1">服务器空数据(1)</string>
    <string name="api_error_timeout">网络请求超时</string>
    <string name="api_error_network">网络异常</string>
    <string name="api_error_parse">数据解析异常</string>
    <string name="api_error_server">服务器异常</string>
    <string name="home">首页</string>
    <string name="market">行情</string>
    <string name="information">资讯</string>
    <string name="mine">我的</string>
    <string name="newbie_title">新手引导</string>
    <string name="prompt_bankcard_not_be_bound">您尚未绑定提现银行卡，请通过充值绑定提现银行卡\n请先添加银行卡再进行提款</string>
    <string name="dialog_your_bankcard_info_is_not_complete">您银行卡信息填写不完整,去填写</string>
    <string name="dialog_please_contact_services_to_unbind">请联系客服，解绑换卡</string>
    <string name="dialog_unauthorized_name">您还未进行实名认证\n请先进行实名认证</string>
    <string name="dialog_you_are_not_promoter_yet">您还不是我们的推广员,是否要成为我们的推广员</string>
    <string name="You_have_not_binding_bank_cards">您还未绑定任何银行卡</string>
    <string name="go_to_bind_bank_card">去绑卡</string>
    <string name="nickname_logged">您好 %1$s</string>
    <string name="account_balance">账户余额(元)</string>
    <string name="sign_in">登录</string>
    <string name="sign_in_has_space">登    录</string>
    <string name="sign_up_free">注册</string>
    <string name="sign_up_free_has_space">注    册</string>
    <string name="message_center">消息中心</string>
    <string name="fund_detail">资金明细</string>
    <string name="now_is_not_has_fund_detail">暂无资金明细</string>
    <string name="score_detail">金币明细</string>
    <string name="now_is_not_has_score_detail">暂无金币明细</string>
    <string name="personal_info">个人信息</string>
    <string name="paid_to_promote">推广赚钱</string>
    <string name="newbie_task">新手任务</string>
    <string name="phone_number">手机号</string>
    <string name="phone_number2">手机号码</string>
    <string name="message_auth_code">短信验证</string>
    <string name="password">密码</string>
    <string name="promote_code">推广码</string>
    <string name="obtain_auth_code">获取验证码</string>
    <string name="obtain_auth_code_continue">重新获取</string>
    <string name="read_and_agreed">  我已阅读并同意</string>
    <string name="service_protocol">《服务协议》</string>
    <string name="ok">确定</string>
    <string name="ok_has_space">确    定</string>
    <string name="cancel">取消</string>
    <string name="resend_after_n_seconds">%1$ds</string>
    <string name="please_input_phone_num">请输入手机号码</string>
    <string name="please_input_password">请输入密码</string>
    <string name="hine_please_input_new_password">请输入新的密码</string>
    <string name="forget_password">忘记密码?</string>
    <string name="recharge">充值</string>
    <string name="newbie">新手</string>
    <string name="withdraw">提现</string>
    <string name="next_step">下一步</string>
    <string name="please_contact_service_if_issues_happen">如果遇到问题,请在首页联系客服</string>
    <string name="find_password">找回密码</string>
    <string name="modify_password">修改密码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="please_input_new_password">请输入新密码(6到20位数字英文)</string>
    <string name="please_input_msg_auth_code">请输入验证码</string>
    <string name="optional">没有可不填</string>
    <string name="please_repeat_new_password">请确认新的密码</string>
    <string name="exit">退出</string>
    <string name="zero">0</string>
    <string name="withdraw_log">提现记录</string>
    <string name="withdraw_amount">提现金额</string>
    <string name="yuan">元</string>
    <string name="withdraw_bankcard">提现银行卡</string>
    <string name="add_bankcard_right_now">马上添加银行卡</string>
    <string name="profile">个人信息</string>
    <string name="my_users">我的用户</string>
    <string name="withdraw_hint">遇到任何问题，请联系首页客服</string>
    <string name="unfilled">未填写</string>
    <string name="filled">已填写</string>
    <string name="authorized">已认证</string>
    <string name="un_authorized">未认证</string>
    <string name="bound">已绑定</string>
    <string name="unbound">未绑定</string>
    <string name="nickname">昵称</string>
    <string name="settings">设置</string>
    <string name="binding_bank_card">绑定银行卡</string>
    <string name="phone_authentication">手机认证</string>
    <string name="logout">退出登录</string>
    <string name="real_name_authorize">实名认证</string>
    <string name="nick_name_can_be_modified_once_only">昵称只支持修改一次</string>
    <string name="bankcard">银行卡</string>
    <string name="phone_authorize">手机认证</string>
    <string name="name">姓名</string>
    <string name="please_input_real_name">请输入真实姓名</string>
    <string name="identity_num">身份证号</string>
    <string name="bankcard_num">银行卡号</string>
    <string name="paying_bank">支付银行</string>
    <string name="please_choose_bank">选择银行</string>
    <string name="bank_reserved_phone_num">银行预留手机号码</string>
    <string name="submit_to_auth">提交认证</string>
    <string name="go_and_auth">去认证</string>
    <string name="unbind">解绑</string>
    <string name="recharge_amount">充值金额</string>
    <string name="hint_recharge_amount">50元起充</string>
    <string name="please_choose_payment">请选择支付方式</string>
    <string name="payment">支付方式</string>
    <string name="bankcard_payment">银行卡支付</string>
    <string name="alipay_payment">支付宝支付</string>
    <string name="wechat_payment">微信支付</string>
    <string name="account_fund_is_covered_by_PA">账户资金安全由平安财险承保</string>
    <string name="recharge_amount_should_larger_than_50">充值金额应大于50</string>
    <string name="frozen_deposit">冻结保证金</string>
    <string name="profit_loss_detail">收支明细</string>
    <string name="there_is_no_trade_detail">暂无交易明细</string>
    <string name="click_to_load_more">点击加载更多</string>
    <string name="there_is_no_message_for_now">暂无任何消息</string>
    <string name="system_message">系统消息</string>
    <string name="now_is_not_has_system_message">暂无系统消息</string>
    <string name="trade_remind">交易提醒</string>
    <string name="now_is_not_has_trade_remind">暂无交易提醒</string>
    <string name="now_is_not_support_recharge">平台近期进行充值维护,暂停充值业务,如有疑问请联系首页客服!</string>
    <string name="take_phone_from_camera">拍照</string>
    <string name="take_phone_from_phone">从手机相册选择</string>
    <string name="take_phone_cancel">取  消</string>
    <string name="the_passwords_are_not_the_same">两次密码输入不一致</string>
    <string name="news_living">资讯直播</string>
    <string name="market_analysing">行情分析</string>
    <string name="industry_news">行业资讯</string>
    <string name="there_is_no_info_for_now">暂无任何资讯</string>
    <string name="comment_read_count">(%1$d)</string>
    <string name="trade_hint">(以上建议仅供参考,风险自担)</string>
    <string name="message_from">来源: %1$s</string>
    <string name="message_details">资讯详情</string>
    <string name="before_data">前值: %1$s</string>
    <string name="expect_data">预期: %1$s</string>
    <string name="real_data">实际: %1$s</string>
    <string name="investor_course">投资者课堂</string>
    <string name="market_close">休市</string>
    <string name="holding_position">持仓中</string>
    <string name="next_day">次日</string>
    <string name="simulation">模拟交易</string>
    <string name="invest_course">投资课堂</string>
    <string name="live">直播</string>
    <string name="contact_service">客服</string>
    <string name="enter_right_now">立即进入</string>
    <string name="there_is_no_data_for_now">暂无数据</string>
    <string name="new_tag">NEW</string>
    <string name="fund_security">资金安全</string>
    <string name="risk_informed">风险告知</string>
    <string name="cooperation_org">合作机构</string>
    <string name="service_phone">客服热线：%1$s</string>
    <string name="trade_access">交易由纽约商品交易所及上期所实盘对接</string>
    <string name="cooperation_partner">合作伙伴：合作伙伴: 纽约商业交易所|芝加哥商品交易所|CME集团\n香港交易所|新加坡交易所|欧洲期货交易所</string>
    <string name="holding_number">持仓 (%1$d)</string>
    <string name="normalize_futures_rule">规范期市秩序，坚持理性投资</string>
    <string name="futures_risk_tips_title">《证券期货交易风险提示》</string>
    <string name="risk_evaluation">风险提示</string>
    <string name="order">订单</string>
    <string name="holding">持仓</string>
    <string name="settlement">结算</string>
    <string name="there_is_no_holding_position_records">暂无持仓记录</string>
    <string name="there_is_no_settlements_records">暂无结算记录</string>
    <string name="close_positions">平仓</string>
    <string name="stop_loss_price">止损价</string>
    <string name="stop_profit_price">止盈价</string>
    <string name="stop_loss">止损</string>
    <string name="stop_profit">止盈</string>
    <string name="last_price">最新价</string>
    <string name="buying">买处理中</string>
    <string name="selling">卖处理中</string>
    <string name="set_stop_profit_stop_loss">设置止盈止损</string>
    <string name="confirm_setting">确认设置</string>
    <string name="stop_range">( 范围 %1$s~%2$s )</string>
    <string name="being_set_order_is_closed">该笔订单已触及风控线，已被系统%1$s平仓</string>
    <string name="day_k_line">日K</string>
    <string name="three_min_k">3分钟</string>
    <string name="five_min_k">5分钟</string>
    <string name="ten_min_k">10分钟</string>
    <string name="thirty_min_k">30分钟</string>
    <string name="sixty_min_k">60分钟</string>
    <string name="account_expand_make_money_right_title">我的用户</string>
    <string name="account_expand_make_money_title">推广挣钱</string>
    <string name="account_expand_make_money_brokerage">可提佣金</string>
    <string name="account_expand_make_money_brokerage_number">0.00</string>
    <string name="account_expand_make_money_brokerage_pickup">提取</string>
    <string name="account_expand_make_money_proxy_grade">代理等级</string>
    <string name="bind_bank_title">银行卡信息</string>
    <string name="bind_bank_warn">持卡人必须与账户信息一致,信息不做其他用途</string>
    <string name="bind_bank_bind">绑    定</string>
    <string name="withdraw_record_title">提现记录</string>
    <string name="withdraw_record_apply_for">申请提现</string>
    <string name="withdraw_record_detail">处理中</string>
    <string name="withdraw_record_fail">提现失败</string>
    <string name="withdraw_record_number_hint">提现金额</string>
    <string name="withdraw_record_number">%1$s  元</string>
    <string name="withdraw_record_status">提现状态</string>
    <string name="withdraw_record_real_account_hint">实际到账</string>
    <string name="withdraw_record_real_account">%1$s  元</string>
    <string name="withdraw_record_poundage_hint">手续费</string>
    <string name="withdraw_record_poundage">%1$s  元</string>
    <string name="withdraw_record_bank_hint">提现银行</string>
    <string name="withdraw_record_bank">%1$s(尾号 %2$s)</string>
    <string name="withdraw_record_time">提现时间</string>
    <string name="withdraw_record_account_time">到账时间</string>
    <string name="open">开  启</string>
    <string name="close">关  闭</string>
    <string name="restart_open">重新设置</string>
    <string name="lightning_orders_title">闪电下单</string>
</resources>