<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_expand_make_money"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg"
    android:orientation="vertical"
    tools:context="com.jnhyxx.html5.activity.account.ExpandMakeMoneyActivity">

    <com.jnhyxx.html5.view.TitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:backFeature="true"
        app:rightText="@string/account_expand_make_money_right_title"
        app:rightTextSize="14dp"
        app:rightVisible="true"
        app:titleText="@string/account_expand_make_money_title" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/account_expand_make_money_brokerage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/account_expand_make_money_brokerage"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/account_expand_make_money_brokerage"
            android:gravity="center_horizontal"
            android:text="@string/account_expand_make_money_brokerage_number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@android:color/holo_red_dark"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/account_expand_make_money_brokerage_pickup"
            android:textColor="@android:color/white" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"
                android:drawableRight="@mipmap/ic_launcher"
                android:text="@string/account_expand_make_money_proxy_grade" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
