<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.jnhyxx.html5.activity.account.BankcardAuthActivity">

    <com.jnhyxx.html5.view.TitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backFeature="true"
        app:titleText="@string/bind_bank_title" />

    <LinearLayout
        android:id="@+id/bankcardInputArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout style="@style/settingLinearLayout">

            <TextView
                style="@style/settingTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cardholder"
                android:textColor="#262626" />

            <EditText
                android:id="@+id/cardholderName"
                style="@style/settingEditTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/please_input_real_name" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_account_bind_bank" />
        </LinearLayout>

        <include layout="@layout/split_line_thick" />

        <LinearLayout style="@style/settingLinearLayout">

            <TextView
                style="@style/settingTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bankcard_num" />

            <EditText
                android:id="@+id/bankcardNum"
                style="@style/settingEditTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/please_input_your_bankcard_num"
                android:inputType="number" />
        </LinearLayout>

        <include layout="@layout/split_line_thick" />

        <LinearLayout
            android:id="@+id/llChooseBank"
            style="@style/settingLinearLayout"
            android:clickable="true">

            <TextView
                style="@style/settingTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paying_bank" />

            <TextView
                android:id="@+id/payingBank"
                style="@style/settingEditTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/please_choose_bank" />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/ic_arrow" />
        </LinearLayout>

        <include layout="@layout/split_line_thick" />

        <LinearLayout style="@style/settingLinearLayout">

            <TextView
                style="@style/settingTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number2" />

            <EditText
                android:id="@+id/phoneNum"
                style="@style/settingEditTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/bank_reserved_phone_num"
                android:inputType="phone" />
        </LinearLayout>

        <include layout="@layout/split_line_thick" />

        <TextView
            android:lineSpacingExtra="15dp"
            android:textSize="12sp"
            android:textColor="#FB4B55"
            android:paddingTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/bind_bank_warn" />

        <TextView
            android:id="@+id/submitToAuthButton"
            style="@style/PrimaryRedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="50dp"
            android:text="@string/bind_bank_bind" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bankcardImageArea"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_margin="10dp"
        android:background="@android:color/holo_orange_dark"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/bank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="招商银行" />

        <TextView
            android:id="@+id/hiddenBankcardNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="****1231" />

        <Button
            android:id="@+id/unbindBankcard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unbind" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>
