<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_lightning_orsers_set"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.jnhyxx.html5.activity.trade.SetLightningOrdersActivity">

    <com.jnhyxx.html5.view.TitleBar
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backFeature="true"
        app:rightVisible="true"
        app:titleText="@string/lightning_orders_title"/>

    <FrameLayout
        android:id="@+id/lightningOrdersData"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:id="@+id/lightningOrdersOpen"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@android:color/holo_red_light">

        <TextView
            android:id="@+id/closeLightningOrder"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/close"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/restartLightningOrder"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/restart_open"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/openLightningOrder"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/open"
            android:textColor="@android:color/white"
            android:visibility="visible"/>
    </LinearLayout>
</LinearLayout>
